--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,34 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ReservationListActivity"
+            android:label="Reservations"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
+            android:name=".ReservationDetailActivity"
+            android:label="Reservation Details"
+            android:parentActivityName=".ReservationListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ReservationListActivity" />
+        </activity>
+        <activity
             android:name=".ItemListActivity"
             android:label="@string/title_item_list"
             android:launchMode="singleTop"
@@ -95,12 +123,12 @@
         <activity
             android:name=".RoomDetailActivity"
             android:label="Room Details"
-            android:parentActivityName=".ItemListActivity"
+            android:parentActivityName=".RoomListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ItemListActivity" />
+                android:value=".RoomListActivity" />
         </activity>
         <activity
             android:name=".TaskListActivity"
