--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:name="com.google.android.backup.api_key"
             android:value="AEdPqrEAAAAIFiYIPKvvqTp0PLMNgMvVCKpuSqLA4M5mhPvq-w" />
 
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -46,6 +47,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <!-- Reservations Activity -->
         <activity
             android:name=".ReservationListActivity"
             android:label="Reservations"
@@ -74,9 +78,31 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ReservationListActivity" />
         </activity>
+
+        <!-- Tasks Activity -->
         <activity
-            android:name=".ItemListActivity"
-            android:label="@string/title_item_list"
+            android:name=".TaskListActivity"
+            android:label="@string/title_task_list"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".TaskDetailActivity"
+            android:label="@string/title_task_detail"
+            android:parentActivityName=".TaskListActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".TaskListActivity" />
+        </activity>
+
+        <!-- Reports Activity -->
+        <activity
+            android:name=".ReportListActivity"
+            android:label="Reports"
             android:launchMode="singleTop"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
@@ -93,15 +119,16 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name=".ItemDetailActivity"
-            android:label="@string/title_item_detail"
-            android:parentActivityName=".ItemListActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden">
+            android:name=".ReportDetailActivity"
+            android:label="Reports"
+            android:parentActivityName=".ReportListActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ItemListActivity" />
+                android:value=".ReportListActivity" />
         </activity>
+
+        <!-- Rooms Activity -->
         <activity
             android:name=".RoomListActivity"
             android:label="Rooms"
@@ -130,28 +157,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".RoomListActivity" />
         </activity>
-        <activity
-            android:name=".TaskListActivity"
-            android:label="@string/title_task_list"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-        <activity
-            android:name=".TaskDetailActivity"
-            android:label="@string/title_task_detail"
-            android:parentActivityName=".TaskListActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".TaskListActivity" />
-        </activity>
 
+        <!-- Inventory Activity -->
         <activity
-            android:name=".ReportListActivity"
-            android:label="Reports"
+            android:name=".ItemListActivity"
+            android:label="@string/title_item_list"
             android:launchMode="singleTop"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
@@ -167,24 +177,38 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-
         <activity
-            android:name=".ReportDetailActivity"
-            android:label="Reports"
-            android:parentActivityName=".ReportListActivity"
-            android:screenOrientation="portrait">
+            android:name=".ItemDetailActivity"
+            android:label="@string/title_item_detail"
+            android:parentActivityName=".ItemListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ReportListActivity" />
+                android:value=".ItemListActivity" />
         </activity>
 
+        <!-- Setup Activity -->
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
+            android:name=".SetupActivity"
+            android:label="Setup"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
+        </activity>
+
+        <!-- Settings Activity -->
+        <activity
+            android:name=".SettingsActivity"
+            android:label="Settings"
+            android:parentActivityName=".SetupActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SetupActivity" />
         </activity>
 
         <provider
@@ -208,15 +232,6 @@
         </receiver>
 
         <service android:name=".util.ComputeNewTasksAlarmService" />
-
-        <activity
-            android:name=".BackupRestoreActivity"
-            android:label="@string/title_activity_backup_restore"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
 
     </application>
 
