--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,7 +99,7 @@
                 android:value=".TaskListActivity" />
         </activity>
 
-        <!-- Reports Activity -->
+        <!-- Historical Reservations Activity -->
         <activity
             android:name=".ReportListActivity"
             android:label="Reports"
@@ -194,6 +194,18 @@
         <activity
             android:name=".ReservationsActivity"
             android:label="Reservations"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <!-- Reports Activity -->
+        <activity
+            android:name=".ReportsActivity"
+            android:label="Reports"
             android:launchMode="singleTop"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
