--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.navare.prashant.resortmanager"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0"
+    >
 
     <uses-sdk
-        android:minSdkVersion="18"
-        android:targetSdkVersion="23" />
+        android:minSdkVersion="17"
+        android:targetSdkVersion="23"
+        />
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="false" />
+        android:required="false"
+        />
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -40,7 +44,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/FullscreenTheme">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,7 +57,6 @@
         <activity
             android:name=".ReservationListActivity"
             android:label="Reservations"
-            android:launchMode="singleTop"
             android:parentActivityName=".ReservationsActivity"
             android:screenOrientation="portrait">
             <meta-data
