--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ systemProp.https.proxyHost=proxy.futureschl.av
 systemProp.https.proxyPassword=mohana123\!\!
 systemProp.http.proxyPort=3128
 systemProp.http.proxyUser=prashant1
+
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
