--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 01 11:37:47 IST 2016
-ndk.dir=/home/pnavare/Android/Sdk/ndk-bundle
-sdk.dir=/home/pnavare/Android/Sdk
+#Thu Aug 31 09:40:31 IST 2017
+sdk.dir=C\:\\Android\\sdk
